--- a/Portofolio.html
+++ b/Portofolio.html
@@ -17,9 +17,9 @@
         <a class="logowebstudio" href="./images/WebStudio.png">Web</a>
         <nav class="header-navigation">
             <ul class="navigation-list unstyled-list">
-                <li><a class="link" href="./index.html">Studio</a></li>
-                <li><a class="link" href="./Portofolio.html">Portofolio</a></li>
-                <li><a class="link" href="Contacts.html">Contacts</a></li>
+                <li><a class="link-style" href="./index.html">Studio</a></li>
+                <li class="link-bottom-border"><a class="link-style" href="./Portofolio.html">Portofolio</a></li>
+                <li><a class="link-style" href="Contacts.html">Contacts</a></li>
             </ul>
             <ul class="right-navigation-list unstyled-list">
                 <li class="header-icon-items">
