--- a/index.html
+++ b/index.html
@@ -20,16 +20,16 @@
         <a class="logowebstudio" href="./Images/WebStudio.png">Web</a>
         <nav class="header-navigation">
           <ul class="navigation-list unstyled-list">
-            <li><a class="link" href="/index.html">Studio</a></li>
-            <li><a class="link" href="./Portofolio.html">Portofolio</a></li>
-            <li><a class="link" href="Contacts.html">Contacts</a></li>
+            <li class="link-bottom-border" ><a class="link-style" href="/index.html">Studio</a></li>
+            <li><a class="link-style" href="./Portofolio.html">Portofolio</a></li>
+            <li><a class="link-style" href="Contacts.html">Contacts</a></li>
           </ul>
           <ul class="right-navigation-list unstyled-list">
             <li class="header-icon-items">
               <a class="contact-mail" href="mailto:info@devstudio.com"><svg class="envelope" width="16" height="12">
                   <use  href="./Images/icon.svg.svg#icon-envelope"></use></svg>info@devstudio.com</a> 
             </li>
-            <li>
+            <li class="header-icon-items">
               <a class="contact-phone" href="tel:+12127724150"><svg class="phone" width="16" height="12">
                   <use  href="./Images/icon.svg.svg#icon-phone"
                   ></use></svg>+1 212-772-4150</a>
@@ -112,9 +112,17 @@
         <div class="what-we-do-container container">
           <h2 class="title-what-we-do">What we do</h2>
           <ul class="what-we-do-photo unstyled-list">
-            <li><img src="Images/img1.jpg" alt="" /></li>
-            <li><img src="Images/img2.jpg" alt="" /></li>
-            <li><img src="Images/img3.jpg" alt="" /></li>
+            <li>
+              <img width="370px" height="294px" src="Images/img1.jpg" alt="" />
+              <p class="what-we-do-description">DESKTOP APPS</p>
+            </li>
+            <li>
+              <img width="370px" height="294px" src="Images/img2.jpg" alt="" />
+              <p class="what-we-do-description">MOBILE APPS</p>
+            </li>
+            <li><img width="370px" height="294px" src="Images/img3.jpg" alt="" />
+            <p class="what-we-do-description">DESIGN SOLUTIONS</p>
+            </li>
           </ul>
         </div>
       </section>
